passing version .env variable as build arg

--- a/default.env
+++ b/default.env
@@ -19,3 +19,6 @@ GRAFFITI=
 # This is the node that beacon nodes should use whilst they are running and
 # producing blocks. Does not require any accounts.
 VOTING_ETH1_NODE=wss://geth:8546
+
+# Set to nimbus version which will be used.
+VERSION=v1.0.2
