changed version description

--- a/default.env
+++ b/default.env
@@ -20,5 +20,5 @@ GRAFFITI=
 # producing blocks. Does not require any accounts.
 VOTING_ETH1_NODE=wss://geth:8546
 
-# Set to nimbus version which will be used.
+# Set nimbus version.
 VERSION=v1.0.2
