--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -6,10 +6,14 @@ RUN apt-get update && apt-get install -y build-essential git libpcre3-dev ca-cer
 
 WORKDIR /usr/src
 
-RUN bash -c "git clone https://github.com/status-im/nimbus-eth2.git"
+RUN git clone https://github.com/status-im/nimbus-eth2.git
 
 WORKDIR /usr/src/nimbus-eth2
 
-RUN bash -c "git checkout $release_version"
+RUN git checkout $release_version
 
-RUN bash -c "make -j $(nproc) nimbus_beacon_node"
+RUN make update
+
+RUN make nimbus_beacon_node
+
+ENTRYPOINT ["build/nimbus_beacon_node"]
